# TicTacToe

./: .gitignore  main.py  pyproject.toml  settings.py
components/: __init__.py  grid.py  line.py  tile.py
