[tool.poetry]
name = "citybuilder"
version = "0.1.0"
description = ""
authors = ["Luka Tavkhelidze <tavkhelidzeluka@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pyright = "^1.1.238"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
